# GameEngineDarkest

./: BUILD_WINDOWS.bat  CMakeLists.txt  GAME_DEVELOPMENT_TUTORIAL.md  LINUX_BUILD_STATUS.md  PHASE_0_META_PLANNING.md  PHASE_2_RENDERING.md  PHASE_3_PHYSICS.md  PHASE_4_2D_PHYSICS.md  README.md  RENDERING_ANALYSIS.md  VISUAL_STUDIO_INTEGRATION.md  WINDOWS_BUILD_INSTRUCTIONS.md  brightness_calculation.py  cube_visibility_report.html  debug_shader_uniforms.py  frame_viewer.html  rendering_pipeline_analysis.py  vcpkg.json  vertex_debug.py
Scripts/: BUILD_SCRIPT_LINUX.sh  BUILD_SCRIPT_WINDOWS.bat  ExampleCubeRotator.cpp  README.md  ScriptTemplate.cpp  ScriptTemplate.vcxproj  TestCubeRotator.cpp
demo/: CMakeLists.txt  GameObjectDemo.cpp  audio_test.cpp  main.cpp
editor/: CMakeLists.txt  main.cpp
scripts/: build_windows.ps1
src/Animation/: AnimationSystem.cpp  AnimationSystem.h  Animator.cpp  Animator.h  CMakeLists.txt
src/Audio/: AudioClip.cpp  AudioClip.h  AudioManager.cpp  AudioManager.h  AudioSource.cpp  AudioSource.h  CMakeLists.txt
src/Core/: CMakeLists.txt  Engine.cpp  Engine.h
src/Core/Components/: AudioComponent.cpp  AudioComponent.h  CameraComponent.h  ColliderComponent.cpp  ColliderComponent.h  MeshComponent.cpp  MeshComponent.h  MovementComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  TransformComponent.h
src/Core/ECS/: Component.cpp  Component.h  Entity.cpp  Entity.h  System.cpp  System.h  World.cpp  World.h
src/Core/Editor/: PlayModeManager.cpp  PlayModeManager.h  SelectionManager.cpp  SelectionManager.h
src/Core/GameObject/: GameObject.cpp  GameObject.h  Prefab.cpp  Prefab.h
src/Core/Logging/: Logger.cpp  Logger.h
src/Core/Math/: Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
src/Core/Memory/: MemoryManager.cpp  MemoryManager.h
src/Core/Physics/: RayCaster.cpp  RayCaster.h
src/Core/Platform/: Input.cpp  Input.h  InputThread.cpp  InputThread.h  Window.cpp  Window.h
src/Core/Profiling/: Profiler.cpp  Profiler.h
src/Core/Project/: ProjectManager.cpp  ProjectManager.h
src/Core/Scenes/: Scene.cpp  Scene.h  TestSceneManager.cpp  TestSceneManager.h
src/Core/Scripting/: ScriptComponent.cpp  ScriptComponent.h
src/Core/Systems/: CameraSystem.cpp  CameraSystem.h  MovementSystem.cpp  MovementSystem.h  PhysicsSystem.cpp  PhysicsSystem.h
src/Core/Tests/: LightIntegrationTest.cpp
src/Core/Time/: Timer.cpp  Timer.h
src/Networking/: CMakeLists.txt  NetworkManager.cpp  NetworkManager.h  Socket.cpp  Socket.h  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h
src/Physics/: CMakeLists.txt  PhysicsWorld.cpp  PhysicsWorld.h
src/Physics/2D/: CMakeLists.txt  PhysicsWorld2D.cpp  PhysicsWorld2D.h  RigidBody2D.cpp  RigidBody2D.h
src/Physics/2D/Colliders/: BoxCollider2D.cpp  BoxCollider2D.h  CircleCollider2D.cpp  CircleCollider2D.h  Collider2D.cpp  Collider2D.h
src/Physics/2D/Collision/: CollisionDetection2D.cpp  CollisionDetection2D.h
src/Physics/2D/Demo/: Physics2DDemo.cpp  Physics2DDemo.h
src/Physics/2D/Spatial/: QuadTree.cpp  QuadTree.h
src/Physics/Colliders/: ColliderShape.cpp  ColliderShape.h
src/Physics/Collision/: CollisionDetection.cpp  CollisionDetection.h  ContinuousCollisionDetection.cpp  ContinuousCollisionDetection.h
src/Physics/Materials/: PhysicsMaterial.cpp  PhysicsMaterial.h
src/Physics/RigidBody/: RigidBody.cpp  RigidBody.h
src/Physics/Spatial/: Octree.cpp  Octree.h
src/Rendering/: CMakeLists.txt  RenderManager.cpp  RenderManager.h  Renderer.cpp  Renderer.h
src/Rendering/Core/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  FrameBuffer.h  FrameCapture.cpp  FrameCapture.h  GLDebug.h  OpenGLHeaders.h  Texture.cpp  Texture.h
src/Rendering/Debug/: DebugRenderer.cpp  DebugRenderer.h
src/Rendering/Lighting/: Light.cpp  Light.h  LightManager.cpp  LightManager.h  LightOcclusion.cpp  LightOcclusion.h
src/Rendering/Loaders/: OBJLoader.cpp  OBJLoader.h
src/Rendering/Materials/: Material.cpp  Material.h
src/Rendering/Meshes/: Mesh.cpp  Mesh.h  Mesh_Original.cpp
src/Rendering/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLRenderer_Original.cpp
src/Rendering/Pipelines/: DeferredRenderPipeline.cpp  DeferredRenderPipeline.h  ForwardRenderPipeline.cpp  ForwardRenderPipeline.h  RaytracingPipeline.cpp  RaytracingPipeline.h  RenderPipeline.h
src/Rendering/PostProcessing/: PostProcessingStack.cpp  PostProcessingStack.h
src/Rendering/Shaders/: Shader.cpp  Shader.h  Shader_Original.cpp  raytracing.comp  shadow_volume_extrusion.comp  shadow_volume_generation.comp  tiled_light_cull.comp
src/UI/: CMakeLists.txt  EngineUI.cpp  EngineUI.h  ImGuiRenderer.cpp  ImGuiRenderer.h
src/UI/Panels/: ConsolePanel.cpp  ConsolePanel.h  InspectorPanel.cpp  InspectorPanel.h  ProjectPanel.cpp  ProjectPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  UIPanel.h  ViewportPanel.cpp  ViewportPanel.h  WorldSettingsPanel.cpp  WorldSettingsPanel.h
tests/physics_headless/: CMakeLists.txt  main.cpp
tests/project_io/: CMakeLists.txt  main.cpp
